docs/sphinx/_downloads/f8bc3b359649e1511b70552f7d3ecf4f/codata.h

typedef struct codata_constant_type{
    char name[65];
    double value;
    double uncertainty;
    char unit[33];
}cct;
//}}}

//----------------------------------------------------------------------
// CODATA_CONSTANTS_2018
//----------------------------------------------------------------------
//{{{
ADD_IMPORT extern const int YEAR_2018;
ADD_IMPORT extern const cct ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2018;
ADD_IMPORT extern const cct ALPHA_PARTICLE_MASS_2018;
ADD_IMPORT extern const cct ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2018;
ADD_IMPORT extern const cct ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;
ADD_IMPORT extern const cct ALPHA_PARTICLE_MASS_IN_U_2018;
ADD_IMPORT extern const cct ALPHA_PARTICLE_MOLAR_MASS_2018;
ADD_IMPORT extern const cct ALPHA_PARTICLE_PROTON_MASS_RATIO_2018;
ADD_IMPORT extern const cct ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS_2018;
ADD_IMPORT extern const cct ANGSTROM_STAR_2018;
ADD_IMPORT extern const cct ATOMIC_MASS_CONSTANT_2018;
ADD_IMPORT extern const cct ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2018;
ADD_IMPORT extern const cct ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2018;
ADD_IMPORT extern const cct ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2018;